--- a/(CP)BetterSweetGemBerryBush/i18n/default.json
+++ b/(CP)BetterSweetGemBerryBush/i18n/default.json
@@ -1,6 +1,6 @@
 {
   "config.DisableNewCrop.name": "Disable New Crop",
-  "config.DisableNewCrop.description": "If this option is true, no new crops will be added to the game, and you can only grow vanilla Sweet Gem Berry. (This is equivalent to turning off this mod)",
+  "config.DisableNewCrop.description": "If this option is true, no new crops will be added to the game, and you can only grow vanilla Sweet Gem Berry. (This is equivalent to turning off this mod. But except for \"Sweet Gem Is Fruit\" config.)",
   "config.Regrow_Days.name": "Regrow Days",
   "config.Regrow_Days.description": "Days it takes for Sweet Gem Berry Bush to re-fruit.",
   "config.SweetGemIsFruit.name": "Sweet Gem Is Fruit",
