--- a/(CP)BetterSweetGemBerryBush/i18n/zh.json
+++ b/(CP)BetterSweetGemBerryBush/i18n/zh.json
@@ -7,6 +7,8 @@
   "config.SweetGemIsFruit.description": "将宝石甜莓的物品类型设置为水果。",
   "config.RecipeDifficulty.name": "配方难度",
   "config.RecipeDifficulty.description": "影响制作宝石甜莓灌木种子所需要的材料的难度。",
+  "config.CropPassable.name": "作物可通过",
+  "config.CropPassable.description": "令宝石甜莓灌木可以被正常通过；如果该项目被设置为false，宝石甜莓灌木将被视为与啤酒花类似的棚架作物。",
 
   "SweetGemBerryBush_Seed_name": "宝石甜莓灌木种子",
   "SweetGemBerryBush_Seed_description": "宝石甜莓与上古水果的魔法嫁接产物。其生长时间与普通宝石甜莓相同，但可以像灌木一样再生，并可反复采摘。"
